--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -32,6 +34,7 @@
     "date-fns": "^4.1.0",
     "encrypt-storage": "^2.14.6",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -41,6 +44,7 @@
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
