--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.66.11",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -36,6 +37,7 @@
     "encrypt-storage": "^2.14.6",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
