--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-select": "^5.10.1",
