--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "encrypt-storage": "^2.14.6",
     "exceljs": "^4.4.0",
+    "jodit-react": "^5.2.15",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
