--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.66.11",
+    "@tanstack/react-table": "^8.21.3",
     "@uidotdev/usehooks": "github:uidotdev/usehooks",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
