--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
