--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-multi-select-component": "^4.3.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-select": "^5.10.1",
