--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.6.0",
     "encrypt-storage": "^2.14.6",
     "exceljs": "^4.4.0",
     "is-odd": "^3.0.1",
@@ -45,6 +46,7 @@
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
