Implement Terms & Conditions management with list, create, update, and delete functionalities

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^8.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-multi-select-component": "^4.3.4",
