--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-select": "^5.10.1",
+    "react-to-print": "^3.1.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
